# checkmark_app

./: .gitignore  CMakeLists.txt  LICENSE  PRIVACY.md  README.md  TERMS.md
cmake/: bootstrap.cmake  configure.cmake  licenses.cmake  toolchain.cmake
cmake/windows/: checkmark.manifest  checkmark.qrc  checkmark.rc  checkmark_version.rc.in
misc/: appcast.xml  benchmark.dem  inno_script.iss
misc/profiles/: RegistrySettings.json
proto/: benchmark_common.proto  benchmark_full.proto  benchmark_public.proto  benchmark_upload.proto  diagnostic.proto
scripts/: sign_installer.ps1  sign_release.ps1  signing.example.ps1
src/: ApplicationSettings.cpp  ApplicationSettings.h  main.cpp
src/benchmark/: BenchmarkConstants.h  BenchmarkDataPoint.h  BenchmarkManager.cpp  BenchmarkManager.h  BenchmarkResultFileManager.cpp  BenchmarkResultFileManager.h  BenchmarkSpecsFileManager.cpp  BenchmarkSpecsFileManager.h  BenchmarkStateTracker.cpp  BenchmarkStateTracker.h  DemoFileManager.cpp  DemoFileManager.h  PresentDataExports.cpp  PresentDataExports.h  RustBenchmarkFinder.h  RustLogMonitor.cpp  RustLogMonitor.h
src/core/: AppNotificationBus.cpp  AppNotificationBus.h
src/diagnostic/: CoreBoostMetrics.h  DevToolsChecker.cpp  DevToolsChecker.h  DiagnosticDataStore.cpp  DiagnosticDataStore.h  DiagnosticWorker.cpp  DiagnosticWorker.h  background_process_monitor.cpp  background_process_monitor.h  background_process_worker.h  cpu_test.cpp  cpu_test.h  drive_test.cpp  drive_test.h  gpu_test.cpp  gpu_test.h  memory_test.cpp  memory_test.h  network_test.cpp  network_test.h  network_test_interface.h  network_test_wrapper.cpp  storage_analysis.cpp  storage_analysis.h
src/diagnostic/cpu_tests/: cache_tests.cpp  cache_tests.h  cpu_benchmarks.cpp  cpu_benchmarks.h  throttle_boost_tests.cpp  throttle_boost_tests.h
src/hardware/: CPUKernelMetricsTracker.cpp  CPUKernelMetricsTracker.h  ConstantSystemInfo.cpp  ConstantSystemInfo.h  DiskPerformanceTracker.cpp  DiskPerformanceTracker.h  Metrics.md  NvidiaMetrics.cpp  NvidiaMetrics.h  PdhInterface.cpp  PdhInterface.h  RustConfigFinder.h  SystemMetricsValidator.cpp  SystemMetricsValidator.h  SystemWrapper.cpp  SystemWrapper.h  WinHardwareMonitor.cpp  WinHardwareMonitor.h
src/hardware/pdh/: PdhDataCache.cpp  PdhDataCache.h  PdhMetricDefinitions.cpp  PdhMetricDefinitions.h  PdhMetricsManager.cpp  PdhMetricsManager.h
src/logging/: Logger.cpp  Logger.h
src/network/: MenuManager.cpp  MenuManager.h  benchmark_backend_data.md  diagnostics_backend_data.md
src/network/api/: BaseApiClient.cpp  BaseApiClient.h  BenchmarkApiClient.cpp  BenchmarkApiClient.h  DownloadApiClient.cpp  DownloadApiClient.h  UploadApiClient.cpp  UploadApiClient.h
src/network/core/: FeatureToggleManager.cpp  FeatureToggleManager.h  INetworkClient.h  NetworkConfig.cpp  NetworkConfig.h  QtNetworkClient.cpp  QtNetworkClient.h
src/network/crypto/: ICryptoProvider.h  NullCryptoProvider.cpp  NullCryptoProvider.h  RSACryptoProvider.cpp  RSACryptoProvider.h
src/network/serialization/: BenchmarkFullCsvToProto.cpp  BenchmarkFullCsvToProto.h  BenchmarkProtobufSerializer.cpp  BenchmarkProtobufSerializer.h  BinarySerializer.cpp  BinarySerializer.h  CsvSerializer.cpp  CsvSerializer.h  ISerializer.h  JsonSerializer.cpp  JsonSerializer.h  ProtobufSerializer.cpp  ProtobufSerializer.h  PublicExportBuilder.cpp  PublicExportBuilder.h
src/network/utils/: NetworkCache.cpp  NetworkCache.h  NetworkResponseCleanup.cpp  NetworkResponseCleanup.h  RequestBuilder.cpp  RequestBuilder.h
src/optimization/: BackupManager.cpp  BackupManager.h  ExportSettings.cpp  ExportSettings.h  ImportSettings.cpp  ImportSettings.h  NvidiaControlPanel.cpp  NvidiaControlPanel.h  NvidiaOptimization.cpp  NvidiaOptimization.h  OptimizationEntity.cpp  OptimizationEntity.h  PowerPlanManager.cpp  PowerPlanManager.h  RegistryBackupUtility.cpp  RegistryBackupUtility.h  RegistryLogger.cpp  RegistryLogger.h  RegistrySettings.cpp  RegistrySettings.h  RegistrySettingsData.cpp  RegistrySettingsData.h  VisualEffectsManager.cpp  VisualEffectsManager.h
src/optimization/Rust optimization/: config_manager.cpp  config_manager.h
src/profiles/: UserSystemProfile.cpp  UserSystemProfile.h
src/ui/: BenchmarkUploadDialog.cpp  BenchmarkUploadDialog.h  CriticalUpdateDialog.cpp  CriticalUpdateDialog.h  CustomConsoleWindow.cpp  CustomConsoleWindow.h  CustomWidgetWithTitle.cpp  CustomWidgetWithTitle.h  DataPreviewWindow.cpp  DataPreviewWindow.h  DetailedGuideDialog.cpp  DetailedGuideDialog.h  DiagnosticUploadDialog.cpp  DiagnosticUploadDialog.h  DiagnosticView.cpp  DiagnosticView.h  EACWarningDialog.cpp  EACWarningDialog.h  GameBenchmarkView.cpp  GameBenchmarkView.h  LoadingWindow.cpp  LoadingWindow.h  MainWindow.cpp  MainWindow.h  OptimizeView.cpp  OptimizeView.h  SettingsDropdown.cpp  SettingsDropdown.h  SettingsToggle.cpp  SettingsToggle.h  SettingsView.cpp  SettingsView.h  SilentNotificationBanner.cpp  SilentNotificationBanner.h  SystemInfoView.cpp  SystemInfoView.h  TermsOfServiceDialog.cpp  TermsOfServiceDialog.h  UpdateCenterView.cpp  UpdateCenterView.h
src/ui/benchmark_results/: BenchmarkCharts.h  BenchmarkCharts_common.cpp  BenchmarkCharts_core.cpp  BenchmarkCharts_cpu.cpp  BenchmarkCharts_dashboard.cpp  BenchmarkCharts_fps.cpp  BenchmarkCharts_frametime.cpp  BenchmarkCharts_gpu.cpp  BenchmarkCharts_gpucpu.cpp  BenchmarkCharts_memory.cpp  BenchmarkCharts_summary.cpp  BenchmarkResultsView.cpp  BenchmarkResultsView.h  HtmlReportGenerator.cpp  HtmlReportGenerator.h
src/ui/optimize_components/: RevertManager.cpp  RevertManager.h  SaveProfileDialog.cpp  SaveProfileDialog.h  SettingsApplicator.cpp  SettingsApplicator.h  SettingsCategoryConverter.cpp  SettingsCategoryConverter.h  SettingsChecker.cpp  SettingsChecker.h  SettingsUIBuilder.cpp  SettingsUIBuilder.h  SettingsValidator.cpp  SettingsValidator.h  UnknownValueManager.cpp  UnknownValueManager.h
src/ui/renderers/: AnalysisSummaryRenderer.cpp  AnalysisSummaryRenderer.h  BackgroundProcessRenderer.cpp  (+14 more)
src/updates/: UpdateManager.cpp  UpdateManager.h
src/version/: checkmark_version.h.in
